k8s-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prosync-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prosync-frontend
  template:
    metadata:
      labels:
        app: prosync-frontend
    spec:
      containers:
        - name: frontend
          image: <FRONTEND_IMAGE>
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: prosync-frontend
spec:
  type: ClusterIP
  selector:
    app: prosync-frontend
  ports:
    - port: 80
      targetPort: 3000
